--- a/_posts/2020-11-10-test.md
+++ b/_posts/2020-11-10-test.md
@@ -1,28 +1,50 @@
 ---
-title: TEST
-categories: [dev]
+title: Openning
+categories: [DEV]
 comments: true
 ---
-### 군생활에 종지부를 찍다.
+
+어떻게 공부할 것 인가
+---
+
+나는 군복무를 하는 동안 나름 책과 친해졌다. 군에서 지원해주는 자기개발 지원금으로 여러 책들을 사서 읽었는데, 그 중 인상깊게 읽은 `어떻게 공부 할 것 인가`이라는 책이 있다.
+<br/><br/>
+<center><img src="https://img.ridicdn.net/cover/593000432/xxlarge" width="50%"/></center>
+
+이 책를 매우 간단하게 요약하자면,
+
+자신이 실제로 알고 있는 지식을 실제로 아는 `메타 인지`를 통해 알고 있다는 착각에 빠지지않고 실질적으로 지식을 습득해야 한다. 대부분의 학습자와 교육자가 착각하지만 지식의 `입력`뿐만이 아니라 `인출`이 정말 중요하다.
+
+교과서를 반복해서 읽기만 한다면 자신이 내용을 알고 있다는 착각에 빠지기 쉬우며 객관적으로 자신을 평가하지 못하게 된다는 것이다.
+
+평가를 위해서가 아니라 메타인지를 위한 시험을 치며, 혹은 다른이에게 입력받은 지식을 설명하면서 지식을 밖으로 끄집어 내는 **노력**이 들어갈 때 실질적인 학습이 진행된다는 내용이다. 
 
 
-글이 제대로 작성되는지 테스트 해보아하기 때문에 아무말이나 해봅니다. 이제 전역이 20일 가량 남았습니다. 길고도 긴 군생활이였지만 결국은 끝나가네요. 감격스럽습니다 하하 언젠가 끝이 오긴 오는군요. 이제 전역하고 공부하고 싶은 것도 많고 사고 싶은 것도 많고 놀러 다니면서 여러 목표들을 이루고 싶네요. 이 의지가 얼마나 갈진 미지수이지만 이러한 설렘은 고3 수능 끝나고 처음입니다. 이러한 설렘들로 남은 학기들의 학점을 올려 준다면 얼마나 좋을까요 하하하....  
-  
-### 마크다운을 쓰다
+기술블로그?
+---  
 
-저는 마크다운으로 글을 제대로 써본적이 없답니다. 사실 마크다운 문법자체를 아예 몰랐다고 봐도 무방하죠. 군장병 온라인 해커톤을 진행하며 프로젝트에서 README 파일을 꾸미며 알게되었습니다. 인터넷을 찾아가며 어설프게 배워서 쓰고 있답니다. 생각보다 정말 편하군요. 이때까지 왜 <dfn info="wiki of markdown">[**Markdown**](https://ko.wikipedia.org/wiki/%EB%A7%88%ED%81%AC%EB%8B%A4%EC%9A%B4)</dfn>으로 글을 쓰지 않았을까요? 이러한 효과들을 넣어보는 재미가 쏠쏠하군요.
+`개발자`라면 구글링을 통해 수많은 능력자들의 기술 블로그의 예시 코드들과 설명을 보며 실력을 쌓았을 것이다. 필자 또한 군복무간 개발에 관심이 생기며 공부를 하고 강의를 들으며 해커톤까지 참가하면서 정말 여러 블로거들의 도움을 받았었다. 
+
+> 왜 이런 글을 쓰는걸까? 써봤자 구글 ads를 통한 약간의 용돈? 재능 기부? 포트폴리오?
+
+물론 위와 같은 이유도 존재 하겠지만 가장 큰 이유는 정보를 공유하는 노력이 들어감으로써 지식을 재확립하고 기억하도록 하는  `인출`의 역할을 하기 때문이라고 생각한다. 공부. 공부. 또 공부해서 죽을 때까지 학습인 소양인 개발자에게 기술 블로그 운영은 필수 불가결한 존재가 아닌가 싶다.
+
+종류가 한두개가 아니네..
+---
+
+찾다보니 끝이 없다.
+> 네이버 / 티스토리 / 브런치 / 미디움 / 워드프레스 / velog / github.io 등등..
+
+
+나 자신의 나름의 기준이 필요했다.
+
+- 전문성있는 포스트 작성이 가능한가
+- 내마음대로 커스텀이 가능한가
+- 너무 생소하지 않아 있어 사용자 유입이 가능한가
 
 
 
-``` c
-    int main(){
-        printf("hello world");
-        return 0;
-    }
-```
 
-이런 `code 박스`도 넣어보구요  
 
-![cat](..\assets\img\cat2.jpg "cat")
 
-이미지도 넣어보고....
+
