--- a/_posts/2020-11-10-Opened.md
+++ b/_posts/2020-11-10-Opened.md
@@ -1,5 +1,5 @@
 ---
-title: Open
+title: Opened
 categories: [Thoughts]
 comments: true
 ---
@@ -7,7 +7,7 @@ comments: true
 어떻게 공부할 것인가
 ---
 
-군복무를 하는 동안 군에서 지원해주는 자기개발 지원금으로 여러 책들을 사서 읽었는데, 그 중 인상깊게 읽은 [어떻게 공부할 것인가](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=49588358)이라는 책이 있다.
+군복무를 하는 동안 군에서 지원해주는 자기개발 지원금으로 여러 책들을 사서 읽었는데, 그 중 인상깊게 읽은 [어떻게 공부할 것인가](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=49588358) 라는 책이 있다.
 <br/><br/>
 ![HOWTOSTUDY](https://img.ridicdn.net/cover/593000432/xxlarge){:.c3}
 
