--- a/_posts/2020-12-28-BOJ2798.md
+++ b/_posts/2020-12-28-BOJ2798.md
@@ -1,12 +1,10 @@
 ---
-title: [BOJ] 2798번 블랙잭 
+title: BOJ 2798번 블랙잭 
 comments: true
 categories: [Algorithm]
 ---
 
-
-## 백준 2798번 [블랙잭]
-### https://www.acmicpc.net/problem/2798
+### [BOJ 2798번 블랙잭](https://www.acmicpc.net/problem/2798)
 
 ---
 
