dir name changed

--- a/_posts/2020-12-30-BOJ7568.md
+++ b/_posts/2020-12-30-BOJ7568.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 7568번 덩치
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 2231번 분해합](https://www.acmicpc.net/problem/7568)
