--- a/_posts/2021-1-15-BOJ14888.md
+++ b/_posts/2021-1-15-BOJ14888.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 14888번 연산자 끼워넣기 
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 14888번 연산자 끼워넣기](https://www.acmicpc.net/problem/14888)
