--- a/_posts/2021-1-16-BOJ14889.md
+++ b/_posts/2021-1-16-BOJ14889.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 14889번 스타트와 링크
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 14889번 스타트와 링크](https://www.acmicpc.net/problem/14889)
