--- a/_posts/2021-1-24-BOJ1149.md
+++ b/_posts/2021-1-24-BOJ1149.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 1149번 RGB 거리
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 1149번 RGB 거리](https://www.acmicpc.net/problem/1149)
