--- a/_posts/2021-1-26-BOJ1463.md
+++ b/_posts/2021-1-26-BOJ1463.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 1463번 1로 만들기
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 1463번 1로 만들기](https://www.acmicpc.net/problem/1463)
