--- a/_posts/2021-1-8-BOJ11650.md
+++ b/_posts/2021-1-8-BOJ11650.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 11650번 좌표 정리하기
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 11650번 좌표 정렬하기](https://www.acmicpc.net/problem/11650)
