--- a/_posts/2020-12-28-BOJ2798.md
+++ b/_posts/2020-12-28-BOJ2798.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 2798번 블랙잭 
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 ### [BOJ 2798번 블랙잭](https://www.acmicpc.net/problem/2798)
