--- a/_posts/2020-12-29-BOJ2231.md
+++ b/_posts/2020-12-29-BOJ2231.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 2231번 분해합
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 2231번 분해합](https://www.acmicpc.net/problem/2231)
