--- a/_posts/2021-1-21-BOJ15649.md
+++ b/_posts/2021-1-21-BOJ15649.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 15649번 N과 M(1)
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 15649번 N과 M(1)](https://www.acmicpc.net/problem/)
