--- a/_posts/2021-1-22-BOJ15650.md
+++ b/_posts/2021-1-22-BOJ15650.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 15650번 N과 M(2)
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 15650번 N과 M(2)](https://www.acmicpc.net/problem/)
