--- a/_posts/2021-1-23-BOJ1003.md
+++ b/_posts/2021-1-23-BOJ1003.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 1003번 피보나치 수열 
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 1003번 피보나치 수열 ](https://www.acmicpc.net/problem/1003)
