--- a/_posts/2021-1-23-BOJ9184.md
+++ b/_posts/2021-1-23-BOJ9184.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 9184번 신나는 함수 실행
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 9184번 신나는 함수 실행](https://www.acmicpc.net/problem/9184)
