--- a/_posts/2021-1-24-BOJ1904.md
+++ b/_posts/2021-1-24-BOJ1904.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 1904번 01타일
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 1904번 01타일](https://www.acmicpc.net/problem/1904)
