--- a/_posts/2021-1-24-BOJ1932.md
+++ b/_posts/2021-1-24-BOJ1932.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 1932번 정수 삼각형
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 1932번 정수 삼각형](https://www.acmicpc.net/problem/1932)
