--- a/_posts/2021-1-24-BOJ9461.md
+++ b/_posts/2021-1-24-BOJ9461.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 9461번 파도반 수열
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 9461번 파도반 수열](https://www.acmicpc.net/problem/9461)
