--- a/_posts/2021-1-28-BOJ10844.md
+++ b/_posts/2021-1-28-BOJ10844.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 10844번 쉬운 계단의 수
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 10844번 쉬운 계단의 수](https://www.acmicpc.net/problem/10844)
