--- a/_posts/2021-1-28-BOJ2156.md
+++ b/_posts/2021-1-28-BOJ2156.md
@@ -1,7 +1,7 @@
 ---
 title: BOJ 2156번 포도주 시식
 comments: true
-categories: [Algorithm]
+categories: [PS]
 ---
 
 # [BOJ 2156번 포도주 시식](https://www.acmicpc.net/problem/2156)
