--- a/_posts/2021-04-02-genrak.md
+++ b/_posts/2021-04-02-genrak.md
@@ -10,4 +10,96 @@ categories: [Insight]
 #PS
 ---
 
-### 2021 학년도 
+# 2021학년도 1학기 중간고사 전략
+---
+
+## 시험대비과목
+22학점 7전공
+>1. C++프로그래밍과실습 (4)
+>2. 시스템소프트웨어 (3)
+>3. 논리회로와설계 (3)
+>4. 유닉스기초 (3)
+>5. 공학선형대수학 (3)
+
+- 이산수학 (3) 
+- 인터넷과웹기초 (3)
+
+: 두 과목은 중간고사 퀴즈, 텀프로 대체. 총 5과목에 대한 시험공부 필요
+
+## 과목 이해도, 공부 진척 현황
+---
+
+
+### C++프로그래밍과실습
+- ps를 하면서 기본 문법과 stl 사용하여 기본적으로 베이스가 있어 타과목 보다 훨씬 공부해야하는 양이 적을 것으로 판단
+- 하지만 iterator enum struct등 평소에 잘 쓰지 않았던 타입과 문법에 유의 할 필요가 있음
+- 교수님이 백준과 실습과제를 많이 내주는 것으로 보아 지엽적인 문법같은 류의 문제보다는 문제해결 능력을 보는 문제가 나올 것 같음.
+- 쉽지만 4학점이므로 방심금물
+
+
+### 시스템소프트웨어
+- 자료형의 비트 표현, 머신레벨의 코드, 어셈블리 등을 배우는데 모두 잘 모르고 처음 배우는 것임
+- 교수님이 설명을 잘 못하시는지 아님 내가 못알아 듣는지 여러번 봐도 이해가 잘 안되는 경우가 있음
+- 책 번역본 책이랑 ppt랑 거의 유사하니 강의와 ppt와 번역본책을 모두 활용하여 복습하니 이해가 가는 것 같다.
+- 생소한 내용인만큼 복습과 연습문제? 를 풀면서 어느정도 암기할 필요가 있음
+- 과제가 어렵다.
+
+### 논리회로설계
+
+- 시소와 마찬가지로 처음 접하는 내용이여서 생소하다.
+- 논리 회로를 여러방법으로 표현한다. 부울식 조작, k-map, 스키매틱
+- 들어보니 k-map으로 지지고 볶고 한다는데, 이 과목은 많은 연습문제 풀이로 숙달이 필요할 것 같음
+- 비교적 이해가 안가는 부분은 없다. 교수님이 설명은 잘하심. 그러나 오픈카톡방은 ...
+
+
+### 유닉스기초
+
+- 유닉스 명령어와 vi 사용법등을 배운다.
+- 교수님이 재미있게 설명해주시고 이해 안가는 부분도 없지만 가장 어떻게 공부해야할지 난감한 과목
+- 교수님의 의식의 흐름대로 가는 강의와 ppt 없는 수업은 뭘 공부 해야 할지 모르게 한다.
+- 날 잡고 모든 강의를 돌려보며 빠르게 교수님이 소개했던 모든 명령어들을 정리할 필요가 있다.
+- 양도 적고, 시험도 쉽게 낸다고 하니, 다 외우면 될 것 같다.
+
+
+### 공학선형대수학
+
+- 과목이 어렵다. 아니 어렵진 않은데 양이 많다
+- 교수님의 수업이 굉장히 알차고 컴팩트한데 강의시간이 짧지 않아 들을 때마다 고통스럽다.
+- 하지만, 어쩌다 보니 노타빌리티로 강의내용을 전부 정리하면서 듣고 있어서 가장 시간 투자를 많이 해버렸다.
+- 처음 들을 때 이해가 가지 않아 고통스럽지만, 천천히 정리하면서 복습하면 다 이해된다. 교수님 말씀을 3번 돌려들으면 다 맞는 말이더라 이말이야~
+- 지금처럼 복습하면서 전반적인 내용을 파악하고 이해하고 있다가 문제 양치기 필요함.
+- 시험 스타일은 정직공정. 공부한만큼 풀수있게 나온다고 한다.
+
+
+### 인웹기와 이산수학
+- 인웹기는 텀프. 중간중간에 api 뭐써서 뭐할지 고민해보자
+- 이산수학도 중간고사 끝나면 시간 투자 업
+
+
+공부 방법 전략
+---
+---
+### 열품타로 공부 시간 추적
+  - 동기부여
+  - 정확한 공부 시간 측정
+  - 과목별 시간투자 비율 확인 가능
+
+### 스티커(맥)으로 할일 노출
+  - 들어야 하는 강의 / 과제 / TODO
+  - 시각적으로 할일 보여줌. 리마인더
+
+### Tabler(폰)
+  - 10분 단위로 계획 가능해서 좋아
+  - 시작적으로도 잘 들어와서 뭐했는지 알기 좋음
+  - 미리 짜놓으면 해야될 것 같은 목적 부여 (리미트가 생김)
+  
+### 노션으로 회고
+  - 반성 및 일기 및 기록
+
+### 블로그
+- 는 하지말자..
+
+
+---
+
+아자아자
