--- a/_posts/2021-07-01-retrospect2021up.md
+++ b/_posts/2021-07-01-retrospect2021up.md
@@ -20,7 +20,7 @@ categories: [Retrospect]
 
 그러다 군대 갈 나이가 가서 입대하였고 생각이 바뀌게 되었다. 아무생각없이 갈때 되어서 간 군대였지만 생각보다 군대는 정말정말로 시간이 아까운 곳이였다. 원하지 않는 곳에서 원하지 않는 사람들과 원하지 않은 일을 해야만 했다. 물론 몇몇 좋은 사람들과 약간의 운전실력, 상급자를 대하는 법등을 배우긴하였다. 하지만 그외에는 성장한다는 느낌을 전혀 받지 못하는 집단이다. 정체되고 멍청해지며 뒤쳐지는 느낌을 받았다.
 
-그래서일까 약간은 조급한 마음을 가지게 되었다. 군대에서도 늘 자기계발에 대한 갈증이 있었다. 하지만 방법을 몰라서 일병때는 독서를 많이 하였다. 짬이 좀 먹고 나서는 우연히 국방부 지원 프로그램을 알게되어 웹개발을 공부하였으며 운좋게 실력있는 소대장님을 만나 해커톤에서 한번 나가 프로젝트를 경험해 볼 수 있었다. 어서 이 적당주의를 탈출해야하기 때문에 전역하고 놀고 싶다는 생각은 그다지 들지않았다.  
+그래서일까 약간은 조급한 마음을 가지게 되었다. 군대에서도 늘 자기계발에 대한 갈증이 있었다. 하지만 방법을 몰라서 일병때는 독서를 많이 하였다. 짬이 좀 먹고 나서는 우연히 국방부 지원 프로그램을 알게되어 웹개발을 공부하였으며 운좋게 실력있는 소대장님을 만나 해커톤에서 한번 나가 프로젝트를 경험해 볼 수 있었다. 어서 이 적당주의를 탈출해야하기 때문일까 전역하고 놀고 싶다는 생각은 그다지 들지않는다.  
 
 ### 알고리즘
 
@@ -44,11 +44,11 @@ categories: [Retrospect]
 
 심플한 테마하나를 가져와서 사지방에서 시간날때마다 뜯어 고쳤다. 이때 웹땔감이 사이버야가다라고 불리는지 조금은 알게된 것 같다. 이때 배운 야가다스킬 html, scss 등은 후에 웹 프로젝트를 할때 매우 유용하였다... 그리고 대충 다 만들고 나서 내 눈엔 깜직한 우리 블로그 친구에게 uzun.dev라는 도메일을 구글에서 만오천원주고 구매하여 이름 지어주었다.
 
-멋있게 잡설없이 전문적인 개발 이야기만 하면 참 좋겠지만 아는게 없는 블로그 주인은 포스팅의 방향을 `개발`  `회고` `알고리즘` `공부복습` 4가지로 잡았다. 근데 지금까지 블로그를 운영하면서 글을 써보니 생각보다 글쓰는게 쉽진 않다. 수능 국어 4등급의 한계가 여기까지인가.. 남들은 글에 뭐 컨셉에 구조에 의의까지 두는데 나는 그런거 못하겟더라 그냥 막쓰고 있다. 어짜피 보는 사람도 없는데 내맘대로 쓸래
+멋있게 잡설없이 전문적인 개발 이야기만 하면 참 좋겠지만 아는게 없는 블로그 주인은 포스팅의 방향을 `개발`  `회고` `알고리즘` `공부복습` 4가지로 잡았다. 근데 지금까지 블로그를 운영하면서 글을 써보니 생각보다 글쓰는게 쉽진 않은 듯하다. 남들은 글의 컨셉에 구조에 의의까지 두는데, 본인은 그런거 못하겠어서 내키는대로 막쓰고 있다. 어짜피 보는 사람도 없는데 내맘대로 쓸래. 꾸준함이 중요한거 아니겠습니까.
 
 ### 2학년 1학기
 
-전역버프로 자신감이 과해진 본인은 전공수업 22학점 7개로 수강학점을 모두 채워보리는 패기를 선보였다. 적당주의에 탈출하기로 결심한 본인은 이번 학기에 스스로에게 적당주의에 탈출하였음을, 열정이 있음을 결과로 증명해내야했다.
+전역버프로 자신감이 과해진 나는 전공수업 22학점 7개로 수강학점을 모두 채워보리는 패기를 선보였다. 적당주의에 탈출하기로 결심한 본인은 이번 학기에 스스로에게 적당주의에 탈출하였음을, 열정이 있음을 결과로 증명하기로 한 것이다.
 
 - 시스템소프트웨어
 - c++프로그래밍과실습
@@ -58,10 +58,12 @@ categories: [Retrospect]
 - 이산수학1
 - 공학선형대수학
 
-이산수학과 인터넷과웹기초는 중간고사가 없기도 하고 중간 전까지는 강의를 안밀려들어서 열정을 가지고 공부를 꽤 많이 했다. 생각보다 시간이 많이 남아서 여러번 복습하고 왠만한건 다 외울정도였는데 중간고사 끝나고 강의가 한 두개씩 밀리기 시작하더니 스노우볼 미친듯이 굴러서 기말 일주일전까지 강의를 듣는 기염을 토하였다. 다행히 학점은 4.23의 나쁘지 않았지만 가장 노력한 공선대만 B+이 나와서 가슴이 쓰라린다.
+이산수학과 인터넷과웹기초는 중간고사가 없기도 하고 중간 전까지는 강의를 안 밀려들어서 열정을 가지고 공부를 꽤 많이 했다. 생각보다 시간이 많이 남아서 여러번 복습하고 왠만한건 다 외울정도였는데 중간고사 끝나고 강의가 한 두개씩 밀리기 시작하더니 스노우볼 미친듯이 굴러서 기말 일주일전까지 강의를 듣는 기염을 토하였다. 다행히 학점은 4.23의 나쁘지 않았지만 가장 노력한 공선대만 B+이 나와서 가슴이 쓰라린다.
 
 ### 기타
 
 `~외 기타`가 아니라 진짜 기타를 샀다. 코로나 덕분일까 전부 비대면으로 신청해서 학기중에는 시험외에는 집밖에 나갈 필요가 없어져버렸다. 그래서 집돌이용 취미를 하나 찾아보다가 꽂혀서 귀여운 하늘색 일렉기타를 하나 구매하였다. 실시간으로 인테리어로써 제 역할을 다하고 있지만, 하반기에는 악기로 사용되었으면 하는 바램이다.
 
 ![guiter](../images/guiter.png)
+
+**끝**
