--- a/_posts/2021-07-01-retrospect2021up.md
+++ b/_posts/2021-07-01-retrospect2021up.md
@@ -30,11 +30,8 @@ categories: [Retrospect]
 
 내 성격이 게으르긴한데 또 정리 기록하는건 좋아하는 편이라 마크다운으로 rdme에 간단하게 기록하였다. 진행도 체크와 성취감, 그리고 공부 흔적이 남은 것 같아 괜찮은 방법인듯하다. 물론 3개월 있으면 잊어먹기 때문에 블로그에 포스팅까지 한다면 베스트.
 
-3월 개강하고 나서는 3복학 1휴학생 구성이라 일주일에 3개씩 풀다가 중간고사기간에 들어서며 흐지부지 되었지만, 약 3~4개월 가량 80 문제정도 풀었다. 많다면 많고 적다면 적은 양이지만 ps감을 찾는데 꽤 도움이 된 것 같다. 알고리즘 스터디를 진행하며 c++도 처음 다루었는데 ps로서의 c++은 c와 크게 다른 부분이 없어서 쉽게 갈아탈 수 있었다. 덕분에 1학기 c++ 강의 중간 전까지는 날로먹고 시험도 만점 받았다.
+개강하고 나서는 4명 중 3명이 복학생이라 일주일에 3개씩 풀다가 중간고사 기간에 들어서며 흐지부지 되었지만, 약 3~4개월 가량 80 문제정도 풀었다. 많다면 많고 적다면 적은 양이지만 ps감을 찾는데 꽤 도움이 된 것 같다. 알고리즘 스터디를 진행하며 c++도 처음 다루었는데 ps로서의 c++은 c와 크게 다른 부분이 없어서 쉽게 갈아탈 수 있었다. 덕분에 1학기 c++ 강의 중간 전까지는 날로먹고 시험도 만점 받았다.
 
-하지만 알고리즘 문제를 너무 무식하게 하지는 않았나 싶기도 하다. 자료구조도 모르는 상태로 모르는것이 나올 때 마다 알아보는 탑다운으로 공부하였는데, 이게 맞는 방법이였는지 아직도 잘 모르겠다. 머리는 아프지만 학습속도면에서는 빠른듯하다.
-
-이제 종강하였으니 방학동안 자료구조와 알고리즘 모두 공부할 예정.
 
 ### 블로그
 
@@ -44,11 +41,11 @@ categories: [Retrospect]
 
 심플한 테마하나를 가져와서 사지방에서 시간날때마다 뜯어 고쳤다. 이때 웹땔감이 사이버야가다라고 불리는지 조금은 알게된 것 같다. 이때 배운 야가다스킬 html, scss 등은 후에 웹 프로젝트를 할때 매우 유용하였다... 그리고 대충 다 만들고 나서 내 눈엔 깜직한 우리 블로그 친구에게 uzun.dev라는 도메일을 구글에서 만오천원주고 구매하여 이름 지어주었다.
 
-멋있게 잡설없이 전문적인 개발 이야기만 하면 참 좋겠지만 아는게 없는 블로그 주인은 포스팅의 방향을 `개발`  `회고` `알고리즘` `공부복습` 4가지로 잡았다. 근데 지금까지 블로그를 운영하면서 글을 써보니 생각보다 글쓰는게 쉽진 않은 듯하다. 남들은 글의 컨셉에 구조에 의의까지 두는데, 본인은 그런거 못하겠어서 내키는대로 막쓰고 있다. 어짜피 보는 사람도 없는데 내맘대로 쓸래. 꾸준함이 중요한거 아니겠습니까.
+멋있게 잡설없이 전문적인 개발 이야기만 하면 참 좋겠지만 아는게 없는 블로그 주인은 포스팅의 방향을 `개발`  `회고` `알고리즘` `공부복습` 4가지로 잡았다. 근데 지금까지 블로그를 운영하면서 글을 써보니 생각보다 글쓰는게 쉽진 않은 듯하다. 남들은 글의 컨셉에 구조에 의의까지 두는데, 본인은 그런거 못하겠어서 내키는대로 막쓰고 있다. 일단 꾸준함이 중요한거 아니겠나 싶다..
 
 ### 2학년 1학기
 
-전역버프로 자신감이 과해진 나는 전공수업 22학점 7개로 수강학점을 모두 채워보리는 패기를 선보였다. 적당주의에 탈출하기로 결심한 본인은 이번 학기에 스스로에게 적당주의에 탈출하였음을, 열정이 있음을 결과로 증명하기로 한 것이다.
+전역버프로 자신감이 과해진 나는 전공수업 22학점 7개로 수강학점을 모두 채워보리는 패기를 선보였다. 적당주의에 탈출하기로 결심한 본인은 이번 학기에 스스로에게 적당주의에 탈출하였음을, 열정이 있음을 결과로 보여주기 했다.
 
 - 시스템소프트웨어
 - c++프로그래밍과실습
@@ -58,7 +55,7 @@ categories: [Retrospect]
 - 이산수학1
 - 공학선형대수학
 
-이산수학과 인터넷과웹기초는 중간고사가 없기도 하고 중간 전까지는 강의를 안 밀려들어서 열정을 가지고 공부를 꽤 많이 했다. 생각보다 시간이 많이 남아서 여러번 복습하고 왠만한건 다 외울정도였는데 중간고사 끝나고 강의가 한 두개씩 밀리기 시작하더니 스노우볼 미친듯이 굴러서 기말 일주일전까지 강의를 듣는 기염을 토하였다. 다행히 학점은 4.23의 나쁘지 않았지만 가장 노력한 공선대만 B+이 나와서 가슴이 쓰라린다.
+이산수학과 인터넷과웹기초는 중간고사가 없기도 하고 중간 전까지는 강의를 안 밀려들어서 열정을 가지고 공부를 꽤 많이 했다. 생각보다 시간이 많이 남아서 여러번 복습하고 왠만한건 다 외울정도였는데 중간고사 끝나고 강의가 한 두개씩 밀리기 시작하더니 스노우볼 미친듯이 굴러서 기말 일주일전까지 강의를 듣는 기염을 토하였다. 다행히 과에서 한 손가락 안의 등수에 들며 열정증명에는 성공했지만 가장 노력한 과목인 선형대수학만 잘 안나와 가슴이 쓰라린다.. 수학은 어려워
 
 ### 기타
 
