--- a/_posts/2020-11-10-Opened.md
+++ b/_posts/2020-11-10-Opened.md
@@ -7,28 +7,23 @@ comments: true
 어떻게 공부할 것인가
 ---
 
-군복무를 하는 동안 군에서 지원해주는 자기개발 지원금으로 여러 책들을 사서 읽었는데, 그 중 인상깊게 읽은 [어떻게 공부할 것인가](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=49588358) 라는 책이 있다.
+군인일 때 자기개발 지원금으로 여러 책들을 사서 읽었는데, 그 중 인상깊게 읽은 [어떻게 공부할 것인가](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=49588358) 라는 책이 있다.
 <br/><br/>
 ![HOWTOSTUDY](https://img.ridicdn.net/cover/593000432/xxlarge){:.c3}
 
-이 책를 매우 간단하게 요약하자면,
+이 책를 매우 간단하게 요약하자면, 자신이 실제로 알고 있는 지식을 인지하는 `메타 인지`를 통해 안다는 착각에 빠지지않고, 실질적으로 지식을 습득해야 한다는 내용이다. 
 
-자신이 실제로 알고 있는 지식을 실제로 아는 `메타 인지`를 통해 알고 있다는 착각에 빠지지않고 실질적으로 지식을 습득해야 한다. 대부분의 학습자와 교육자가 착각하지만 지식의 `입력`뿐만이 아니라 `인출`이 정말 중요하다.
+대부분의 학습자와 교육자가 착각하는 부분이 지식의 `입력`뿐만이 아니라 `인출`이 정말 중요하다고 한다. 교과서를 반복해서 읽기만 한다면 자신이 내용을 알고 있다는 착각에 빠지기 쉬우며 객관적으로 자신을 평가하지 못하게 된다는 것이다.  
 
-교과서를 반복해서 읽기만 한다면 자신이 내용을 알고 있다는 착각에 빠지기 쉬우며 객관적으로 자신을 평가하지 못하게 된다는 것이다.
-
-평가를 위해서가 아니라 메타인지를 위한 시험을 치며, 혹은 다른이에게 입력받은 지식을 설명하면서 지식을 밖으로 끄집어 내는 **노력**이 들어갈 때 실질적인 학습이 진행된다는 내용이다. 
+평가를 위해서가 아니라, 메타인지를 위한 시험을 치거나 입력받은 지식을 설명하면서 지식을 밖으로 끄집어 내는 **노력**이 들어갈 때 실질적인 학습이 진행된다.  
 
 
-기술블로그?
+블로그?
 ---  
 
 `개발자`라면 구글링을 통해 수많은 능력자들의 기술 블로그의 예시 코드들과 설명을 보며 실력을 쌓았을 것이다. 필자 또한 군복무간 개발에 관심이 생기며 공부를 하고 강의를 들으며 해커톤까지 참가하면서 정말 여러 블로거들의 도움을 받았었다. 
 
-> 왜 블로그를 정성들여 운영하는 걸까  
-약간의 용돈? 재능 기부? 포트폴리오?
-
-물론 위와 같은 이유도 존재 하겠지만 가장 큰 이유는 정보를 공유하는 노력이 들어감으로써 지식을 재확립하고 기억하도록 하는 `인출`의 역할을 하기 때문이라고 생각한다. 학습이 평생소양인 개발자에게 기술 블로그 운영은 필수 불가결한 존재가 아닌가 싶다.
+블로그에 포스팅 쓰면서 정보를 공유하는 것은 알고 있는 지식을 인출하려는 인출의 형태와 비슷하다. 결국 지식을 나누는 공유문화와 더불어 자신이 공부하는 방법중의 하나가 아닌가 싶다. 학습이 소양인 개발자에게 딱  
 
 시작하기 전
 ---
@@ -41,19 +36,18 @@ comments: true
 
 
 - 전문성있는 포스트 작성이 가능한가
-- 내마음대로 커스텀이 가능한가
+- 마음대로 커스텀이 가능한가
 - 너무 생소해서 사용자 유입이 없지는 않은가
 
 
 네이버는 전문성이 없어 보인다. 브런치는 디자인도 준수하고 전문성 있는 포스팅이 가능하지만 개발자 친화적이지 않다. 미디움도 나쁘지 않지만 디자인을 바꿀 수 없다.특히 명조체가 마음에 들지않는다.     
 
 ![](https://img.storyblok.com/fwmvlmb0fadHK5Xa5z_ojh8XltY=/840x0/filters:filters:fill(FFFFFF):filters:format(jpeg)/f/39898/1419x322/a7d54ce659/jekyll-logo.png){:.7c}
-![](http://www.joshualevi.com/wp-content/uploads/2019/08/logo_google_domains_192px_Round_lockup.jpg){:.c4}
 결국 `tistory` / `velog` / `github page 호스팅` 중 고민하다가 불편하지만 내맘대로 바꾸고 git으로 관리 가능한 github 블로그를 선택하였다. 정적사이트 생성기로 가장 유명한 `Jekyll`을 이용하였고 [Google Domain](http://domain.google)에서 [**uzun.dev**](https://uzun.dev)의 도메인을 구입하여 블로그를 개설하였다.
 
 Beginning
 ---
-칼을 들었다면 무라도 썰어야하지 않겠는가? 지속적인 관심,시간과 노력이 투자되어야 미시적으로는 지식을 재확립하며 학습하고 나아가 지식을 공유함으로써 좋은 개발문화에 기여할 수 있을 것이다. 
+지속적인 관심,시간과 노력이 투자되어야 아는 것을 정리하며 학습하고, 나아가 지식을 공유함으로써 좋은 개발문화에 기여할 수 있을 것이다. 
 
 나중에 어떠한 블로그가 되어있을 지는 아무도 모르지만 남들에게 보여줄 수 있을만큼 키우고 싶다. 시작이 반인데 여러 시행착오를 겪으며 내 이름을 건 블로그를 오픈한만큼, 후에 구글에 검색하면 상단에서 발견되는 사이트가 되었으면.
 
