--- a/_posts/2020-11-13-2020OSAM1.md
+++ b/_posts/2020-11-13-2020OSAM1.md
@@ -1,67 +1,57 @@
 ---
 title: 2020 국방오픈소스아카데미 OSAM [1]
 comments: true
-categories: [Project]
+categories: [Contest]
 ---
 
 
-목표를 찾다
+군대에서 공부하기
 ---
 
+시간의 소중함을 깨닫고 자기계발에 목말라 있던 상병 쯤, 무언가 해보겠다고 연등시간에 웹공부를 하곤 했다. 우연한 기회에 OSAM 이라는 국방부와 과학정보통신기술부가 주관하는 군장병 소프트웨어 역량 교육 프로그램을 알게되었다.
 
-7월 쯤일까, 군생활을 하면서 시간의 소중함을 깨닫고 자기계발에 목말라 있던 상병이였던 때가 있었다. 무언갈 해보겠다고 연등시간에 웹공부를 하곤 했는데, 우연한 기회에 OSAM 이라는 국방부와 과학정보통신기술부가 주관하는 군장병 소프트웨어 역량 교육 프로그램을 알게되었다.
-
-
-[OSAM](http://osam.kr) 사이트에서는 군 장병 및 간부들에게 오픈소스와 여러 개발에 관한 꽤나 괜찮은 강의를 제공해준다. 뿐만 아니라 9월에 강의중 평가와 코딩테스트, 개발계획서를 받아 성적 우수자 150명을 선발하여 집체교육을 시켜준단다. 여러 후기들을 찾아보니 정말 컴퓨터 공학도로 군복무 중 이 정도의 교육과 경험을 쌓는다는 건, 스스로 전공에 무지다고 느껴 무력하던 필자에게 정말 좋은 기회라고 생각하였다.
+[OSAM](http://osam.kr) 사이트에서는 군 장병 및 간부들에게 오픈소스와 여러 개발에 관한 강의를 제공해준다. 9월에는 강의를 수강하고 평가와 코딩테스트, 개발계획서로 우수자 150명을 선발하여 집체교육을 시켜준단다. 후기들을 찾아보니 개발자가 되고 싶은 나로서는 군복무 중 이 정도의 경험은 본인에게 좋은 기회라고 생각하였다.
 
 ![OSAM](https://blog.kakaocdn.net/dn/nvAeJ/btqIX4dSKWO/wq68R9kdUl3GlnE42kfH51/img.png){:.i}*OSAM 국방오픈소스프로그램*
 
-평소 그저 학부 1학년를 고만고만한 성적으로 끝내고 군대로 온 나는 웹프로그래밍은 커녕 개발에 대해 아는 것이 없었고, 기초 강의를 들으며 기초부터 차근차근 쌓아올렸다. 군대에서 하는 해커톤에 참가하겠다는 하나의 일념 하에 개인정비와 연등시간을 투자하여 준비했다. 
+학부 1학년를 고만고만한 성적으로 끝내고 군입대한 필자는 개발에 대해 아는 것이 없었고, 사이트에서 제공하는 기초 강의를 들으며 해커톤에 참가하겠다는 의지로 개인정비와 연등시간을 투자하여 준비했다. 그러던 중 아쉽게 코로나로 인해 2020년도에는 교육프로그램이 파견형태에서 온라인으로 해커톤을 진행하는 방식으로 대체되었다고 한다.  
 
-그렇게 하루하루를 보내던 중, 안타까운 소식을 듣게되었다. 아쉽게 코로나로 인해 2020년도에는 교육프로그램이 파견형태에서 온라인으로 해커톤을 진행하는 방식으로 대체되었다고 한다. 5일간 연수센터에서 사제 밥과 대여 노트북, 고급개발멘토들, 열정적인 팀원들과 밤을 지세우며 무언가를 개발해낸다는 행복한 꿈은 날라가버린 것이다.
+몇일간 연수센터에서 사제 밥과 대여 노트북, 고급개발멘토들, 열정적인 팀원들과 밤을 지세우는 그런 그림은 아쉽게 날라갔다...
 
-하지만 포기할 순 없었다. 이미 되돌리기에는 너무 많은 시간을 투자하였고, 어느샌가 프로그램 참가는 나의 남은 군생활의 목표가 되어버렸다. 군대에서 얻은거라고는 약간의 사회생활이나 운전경험뿐인이였던 나는 앞으로 흘러갈 시간들이 허무하지 않도록, 전역 후에 19개월을 내다버린게 아님을 증명해내기 위해서 노력했다.
+하지만 포기할 순 없었다. 열심히 하다보니 프로그램 참가는 남은 지루한 군생활의 목표가 되어버렸다. 군대에서 얻은거라고는 약간의 사회생활이나 운전경험뿐인이였던 나는, 1년반을 내다버린게 아님을 증명해내기 위해서 노력했다.  
 
-위기
----
-어연 대회를 준비한지 2달, 선발을 위해 대회와 여러 평가들이 시행되는 9월이 다가오고 있었다. 선발조건인 기초강의들과 참여종목(WEB에 참가함)의 강의를 모두 수강하였고, 선발을 위한 평가요소중 하나인 군장병 알고리즘 대회를 준비하였다. 프로그래머스에서 대회를 위탁받았는데, 5개의 알고리즘 문제를 푸는 흔히 말하는 코딩테스트를 보는 형태였다. 
+### 알고리즘 공부
 
-알다싶이 나는 그냥 흘러가는대로 학부 1학년을 졸업한, 사실상 비전공자이기에 아는게 없었다. [프로그래머스](http://programmers.co.kr)에서 제공해주는 문제SET중 level 1,2,3 대부분을 프린트하여 무작정 풀기 시작했다. 연등시간에 여러 문제들을 풀기에는 시간이 턱없이 부족해서 일과 중 남는 시간에 로직을 설계하고 pseudo코드를 짜놓은 다음, 연등시간에 코드를 돌려보면서 잘 돌아가는지 확인하는 식으로 코딩테스트를 준비했다.  
+선발조건인 기초강의들과 참여종목(WEB에 참가함)의 강의를 모두 수강하였고, 선발을 위한 평가요소중 하나인 군장병 알고리즘 대회를 준비하였다. 프로그래머스에서 대회를 위탁받았는데, 5개의 알고리즘 문제를 푸는 흔히 말하는 코딩테스트를 보는 형태였다.  
 
-c언어, 파이썬 전공수업을 들으면서 기본적인 정렬과 완전탐색 정도는 어느정도 해봤기에 레벨1~2는 그렇게 어렵지 않았지만, 3단계부터는 로직 자체가 떠오르지 않거나 짜도 너무나 비효율적이였다. 당연한 결과였다. 알고리즘은 커녕 자료구조도 모르는 상태였으니까.
+학부 1학년을 생각없이 수료한, 사실상 비전공자이기에 아는게 없었다. [프로그래머스](http://programmers.co.kr)에서 제공해주는 문제SET 중 level 1,2,3 대부분을 프린트하여 무작정 풀기 시작했다. 연등시간에 여러 문제들을 풀기에는 시간이 턱없이 부족해서 남는 시간에 로직을 설계하고 pseudo코드를 짜놓은 다음, 연등시간에 코드를 돌려보면서 잘 돌아가는지 확인하는 식으로 코딩테스트를 준비했다.  
 
-> " 아, 공부해야할게 많구나... "
+c언어, 파이썬 전공수업을 들으면서 기본적인 정렬과 완전탐색 정도는 어느정도 해봤기에 레벨1~2는 그렇게 어렵지 않았지만, 3단계부터는 로직 자체가 떠오르지 않거나 짜도 너무나 비효율적이였다. 대회가 2주를 앞두었기에 탑다운으로 들이대며 공부하였던 기억이 난다.
 
-하지만 지금부터 기초부터 쌓아 올릴 순 없었다. 대회가 2주 남았기 때문이다.  
-나는 **탑다운** 으로 가기로 했다. 그냥 부딪치겠다는 말이다.
+설상가상으로 코로나 상황이 심각해지자 부대에서 사지방과 같은 다중이용시설을 금지해버렸다. 그때부터는 `손코딩` `뇌컴파일` `눈디버깅`
 
-설상가상으로 코로나 상황이 심각해지자 부대에서 사지방과 같은 다중이용시설을 금지해버렸다. 하하 그때부터는 정말로 `손코딩` `뇌컴파일` `눈디버깅`의 시작이였다.
-
-일단 문제를 최대한 여러번 읽으면서 이해한 다음, 블로그에 올라온 예시 답안들을 이해하려고 노력했다. 그 중 아예 모르는 개념 (DP,DFS,heap,edge 등등...)은 구글링으로 수많은 블로그를 정독하며 공부했다. 정말 모르겠는데 정말로 하루종일 붙잡고 있으니까 진전이 생기기 시작했다. 손으로 코드를 수십번 코드를 짜보고 고치고를 반복하니까 알고리즘의 로직 자체가 외워져 버린것이다. 
+일단 문제를 최대한 여러번 읽으면서 이해한 다음, 블로그에 올라온 예시 답안들을 이해하려고 노력했다. 그 중 아예 모르는 개념은 구글링으로 블로그를 찾으며 공부했다. 시간이 많아 하루종일 붙잡고 있으니까 진전이 생기기 시작했다. 코드를 짜보고 고치고를 반복하니까 알고리즘의 로직 자체가 외워지긴 했다.
 
 코딩테스트
 ---
-뭐 어째저째 대회를 치뤘다. 
+결과가 나쁘지 않았다. 사실 치고나서 생각해보니 오픈북과 같아 누가누가 더 고민해서 잘 푸나의 경쟁이였기에 하루종일 시간을 때려박았던 내가 좋은 등수를 얻을 수 있었던 것 같다.
 
-결과도 나쁘지 않았다. 아니 좋았다(?) 사실 치고나서 생각해보니 오픈북과 같아 누가누가 더 고민해서 잘 푸나의 경쟁이였기에 하루종일 시간을 때려박았던 필자가 좋은 등수를 얻을 수 있었던 것 같다.
+![](https://i.ibb.co/6mHv4h0/rank.png)*450명 중 19등*
 
-![](https://i.ibb.co/6mHv4h0/rank.png)*450명 중 19등!*
+1번 2번은 맞추라고 낸 문제였고, 3번도 쉽지만 DP를 쓰지않으면 효율성에서 통과할 수 없었다. 4번도 간단하게 생각하면 로직이 어렵지 않았지만 효율성에서 100점을 맞지 못했다. 분명 LCA알고리즘을 쓰는게 맞는 것 같은데 결국은 풀지못했다.
 
-1번 2번은 맞추라고 낸 문제였고, 3번도 쉽지만 DP를 쓰지않으면 효율성에서 통과할 수 없었다. 4번도 간단하게 생각하면 로직이 어렵지 않았지만 효율성에서 나가리였다. 분명 LCA알고리즘을 쓰는게 맞는 것 같은데 결국은 풀지못했다.
-
-5번은 맞추라고 낸 문제가 아니다.... 유향 Cactus 그래프를 조건에 따라 카운트해서 최대로 얻을 수 있는 edge수를 구하는 문제인데 엄두가 안나서 찍기 야매신공으로 절반가까이 맞추었다. ㅎㅎ 조금 야비하지만 답안 제출에 제한이 없었기 때문에 내 잘못은 아니지 않나 싶다. 
+5번은 너무너무 어려웠다ㅠㅜ 유향 Cactus 그래프를 조건에 따라 카운트해서 최대로 얻을 수 있는 edge수를 구하는 문제인데 찍기 야매신공으로 절반가까이 맞추었다.
 
 선발
 ---
-9월 15일까지의 강의수강, 이론테스트, 코딩테스트, 개발계획서 등 모든 선발과정 끝나고 결과 발표를 기다렸다. 17일이 되고 합격자 공지가 개인정비때 기습적으로 올라왔다. 와우 대학 합격자 조회할 때 이후로 오랜만에 떨렸다. 
+강의수강, 이론테스트, 코딩테스트, 개발계획서 등 모든 선발과정 끝나고 결과 발표를 기다렸다. 합격자 공지가 개인정비때 기습적으로 올라왔는데, 입대 이후로 오랜만에 떨렸다. 
 
-![](https://i.ibb.co/rdsMRpn/2020-11-15-190724.png)*ㅎㅎ 선발되었다*
+![](https://i.ibb.co/rdsMRpn/2020-11-15-190724.png)
 
-전군에서 간부,병 상관없이 150명중에 1명으로 선발된 것이다. ~~*사실 지원자가 500명도 안되긴 했다*~~ 사실 아직 본 대회는 시작도 안했다. 아주 흔한 공모전의, 그것도 겨우 참가자격을 얻은 별거아닌 일이라고 생각할 수 있어도, 나에게는 3개월간 밑바닥에서부터 자는 시간 쪼개서 매일 공부한 결과였다. 
+간부,병 상관없이 150명안에 선발되었다. 사실 아직 본 대회는 시작도 안했지만, 나에게는 3개월간 밑바닥에서부터 시간 쪼개서 공부한게 의미있었던거 같아 뿌듯했다.
 
-> " 이제 그래도 군대에서 뭐했냐고 물어보면 적어도 말은 할 순 있겠다!! "
 
 
 <br />
 
-**[↗[2]편](../categories/Contest)에 계속**
+<!-- **[↗[2]편](../categories/Contest)에 계속** -->
