--- a/_posts/2021-07-20-swlecture1.md
+++ b/_posts/2021-07-20-swlecture1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SW 특강 - 개발자로 살아남기
+title: 개발자로 살아남기
 comments: true
 categories: [Insight]
 
@@ -14,7 +14,7 @@ categories: [Insight]
 
 ---
 
-7월 20일 진행한 부산대 'SW취업특강 1차 - 개발자로 살아남기' 강연의 내용을 정리한 포스팅입니다.
+7월 20일 진행한 부산대 '*SW취업특강 1차 - 개발자로 살아남기*' 강연의 내용을 정리한 포스팅입니다.
 
 [https://brocess.tistory.com/](https://brocess.tistory.com/)
 
@@ -126,8 +126,8 @@ IOS / 보안 / DB 등등
 - 끊임없는 스터디
 
 - - - -
-개발자는 너무 매력적인 직업
-내 머릿속 상상을 현실세계에 구현
+개발자는 너무 매력적인 직업이다.  
+내 머릿속 상상을 현실세계에 구현할 수 있음.
 
 
 
