--- a/_posts/2021-07-20-swlecture1.md
+++ b/_posts/2021-07-20-swlecture1.md
@@ -14,7 +14,7 @@ categories: [Insight]
 
 ---
 
-7월 20일 진행한 부산대 '*SW취업특강 1차 - 개발자로 살아남기*' 강연의 내용을 정리한 포스팅입니다.
+7월 20일 진행한 부산대 선배님의'*SW취업특강 1차 - 개발자로 살아남기*' 강연의 내용을 정리한 포스팅입니다.
 
 [https://brocess.tistory.com/](https://brocess.tistory.com/)
 
@@ -23,15 +23,15 @@ categories: [Insight]
 # 개발자로 살아가기
 ---
 
-앞으로도 IT시장은 커질 수 밖에 없다 -> 개발자 GOOD  
+앞으로도 IT시장은 커질 수 밖에 없다. 개발자 GOOD  
 But, 적성을 고려해보아야 한다.
 
 
 ### 적성에 맞는지 알아보는 법
 1. 일단 해보기  
 2. 일단 잘해지기  
--> 잘해졌는데 재미있다 / 적성에 맞음  
--> 잘해졌는데 재미없다 / 적성에 맞지 않음
+- 잘해졌는데 재미있다 / 적성에 맞음  
+- 잘해졌는데 재미없다 / 적성에 맞지 않음
 
 ### 회사는 천재 개발자만 필요로 하는가?
 No, 절대 그렇지 않다.
@@ -41,7 +41,7 @@ No, 절대 그렇지 않다.
 ![picture 1](../images/d5cb0b623de88f3825ec6a57385d8ce5143cfdec99d1a85b0af78fdc257052a1.png)  
 
 
-첫 빨간색 gap에 좌절하지 않기
+첫 빨간색 *gap*에 좌절하지 않기
 
 ### 개발을 좋아해야만 개발자가 될 수 있는가?
 잘해지면 재밌다!  
@@ -55,7 +55,7 @@ No, 절대 그렇지 않다.
 IOS / 보안 / DB 등등
 
 진로에 대한 충분한 고민이 필요하다.    
-- 홈페이지 만들기, 앱 만들기, 자격증 등의 충분한 노력이 필요하다.
+- 홈페이지 만들기, 앱 만들기, 자격증 등의 충분한 노력과 경험이 필요하다.
 
 ### 내가 가고 싶은 회사는?
 > - 은행: 은행권 전산실  
