--- a/_posts/2021-10-10-java01.md
+++ b/_posts/2021-10-10-java01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 자바 자료형 Data Types 정리
+title: 자바 자료형 정리 (Data Types) - Primitive와 Wrapper 클래스
 comments: true
 categories: [Java]
 
